--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ pytest==8.3.5
 pytweening==1.2.0
 requests==2.32.3
 rubicon-objc==0.5.0
+ruff==0.11.12
 selenium==4.31.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
