--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,11 +66,10 @@ jobs:
             sh -c "pip install -r requirements-test.txt && python -m pytest tests -v --alluredir=allure-results"
 
       - name: Store allure results
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: allure-results
-          path:
-            allure-results
+          path: allure-results
           retention-days: 1
 
   generate-report:
@@ -78,16 +77,16 @@ jobs:
       needs: integration
       name: Generate report
       steps:
-        - uses: actions/setup-java@v3
+        - uses: actions/setup-java@v4
           with:
             distribution: 'microsoft'
             java-version: '17'
-        - run: sudo wget https://github.com/allure-framework/allure2/releases/download/2.23.1/allure-2.23.1.tgz && sudo tar -zxvf allure-2.23.1.tgz -C /opt/ && sudo ln -s /opt/allure-2.23.1/bin/allure /usr/bin/allure
+        - run: sudo wget https://github.com/allure-framework/allure2/releases/download/2.30.0/allure-2.30.0.tgz && sudo tar -zxvf allure-2.30.0.tgz -C /opt/ && sudo ln -s /opt/allure-2.30.0/bin/allure /usr/bin/allure
         - name: Download all workflow run artifacts
-          uses: actions/download-artifact@v3
+          uses: actions/download-artifact@v4
         - run: allure generate -c allure-results -o _site
         - name: Store generated report
-          uses: actions/upload-artifact@v3
+          uses: actions/upload-artifact@v4
           with:
             name: _site
             path:
@@ -100,9 +99,9 @@ jobs:
     name: Report publication
     steps:
       - name: Download all workflow run artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
       - name: Upload Pages artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v3
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v1.2.9
+        uses: actions/deploy-pages@v4
