--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,7 +58,6 @@ jobs:
           wait-time: 45
           require-healthy: true
 
-
       - name: Wait for postgres-university
         uses: stringbean/docker-healthcheck-action@v1
         with:
@@ -73,8 +72,8 @@ jobs:
             --network host \
             -v $(pwd):/workspace \
             -w /workspace \
-            python:3.11-slim \
-            sh -c "pip install -r requirements-test.txt && python -m pytest tests -v --alluredir=allure-results"
+            eduardfomichev/test-runner:latest \
+            python -m pytest tests
 
       - name: Store allure results
         uses: actions/upload-artifact@v4
