--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -94,13 +94,12 @@ jobs:
         - run: sudo wget https://github.com/allure-framework/allure2/releases/download/2.30.0/allure-2.30.0.tgz && sudo tar -zxvf allure-2.30.0.tgz -C /opt/ && sudo ln -s /opt/allure-2.30.0/bin/allure /usr/bin/allure
         - name: Download all workflow run artifacts
           uses: actions/download-artifact@v4
-        - run: allure generate -c allure-results -o _site
+        - run: allure generate -c allure-results -o allure-report
         - name: Store generated report
           uses: actions/upload-artifact@v4
           with:
-            name: _site
-            path:
-              _site
+            name: allure-report
+            path: allure-report
             retention-days: 1
 
   publish-report:
