--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -111,6 +111,8 @@ jobs:
         uses: actions/download-artifact@v4
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
+        with:
+          path: allure-report
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
